# buge

crates/backend/: Cargo.toml
crates/frontend/: Cargo.toml
crates/frontend/src/: main.rs  util.rs
crates/frontend/src/components/: login.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/tauri/: Cargo.toml  tauri.conf.json
crates/types/src/: lib.rs
