[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0"
tower-http = {version = "0", features = ["cors"]}
tokio = { version = "1.0", features = ["full"] }
serde = "1"
serde_json = "1"
lazy_static = "1"

types = { path = "../types" }
